added keepTime function, delete contentHolder html on quiz start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,11 @@ main {
 .content-holder {
     display: flex;
     flex: 0 50%;
-    text-align: center;
     flex-wrap: wrap;
+}
+
+#center {
+    text-align: center;
     justify-content: center;
 }
 
