--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,9 +42,10 @@ main {
     flex: 0 100%;
 }
 
-.btn-container {
-    margin: 5px;
-    margin-left: 0px;
+.btn-grid {
+    display: grid;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .btn {
@@ -64,8 +65,7 @@ main {
 .bold-text {
     font-weight: 700;
     font-size: 32px;
-    margin-bottom: 15px;
-    display: flex;
+    display: inline;
 }
 
 .torf-text {
@@ -114,7 +114,7 @@ main {
 
 span {
     border-bottom: 2px solid black;
-    flex: 0 10%;
+    color: white;
 }
 
 .btn:hover {
