--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ main {
     display: inline;
 }
 
-.torf-text {
+.answer-text {
     border-top: solid 1px grey;
     color: grey;
     padding: 7px 15px;
@@ -124,4 +124,24 @@ main {
 
 .btn:hover {
     background-color: violet;
+}
+
+@media (max-width: 768px) {
+    * {
+        font-size: 4vw;
+    }
+
+    .content-holder {
+        flex: 0 90%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .bold-text {
+        font-size: 7vw;
+    }
+
+    .answer-text {
+        font-size: 6vw;
+    }
 }
